# cor-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: weather.py
app/core/: config.py  db.py  types.py
scripts/: create_db.py  load.py  summarize.py
tests/: conftest.py  test_api.py  test_scripts.py
